Subida de recetas de verduras

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@
         font-family: 'Pacifico', cursive;
         font-size: 35px;
     }
+    .h1_cabecera_asside {
+        font-family: 'Pacifico', cursive;
+        font-size: 25px;
+    }
 
     .cabecera_receta {
         font-family: 'Arvo', serif;
